# Automedgeai

./: .gitignore  HUBSPOT_CRM_FIXES.md  README.md  render.yaml  todo.txt
backend/: llm.py  main.py  models.py  pyproject.toml  requirements.txt  workflow.py
backend/api/: deps.py  router.py
backend/api/v1/: bookings.py  chat.py  health.py  leads.py  retell.py  workflow.py
backend/api/v1/chat/: __init__.py  base.py  hvac.py  pest_control.py  plumbing.py  roofing.py  router.py
backend/core/: auth.py  cache.py  config.py  database.py  exceptions.py  firebase.py  lifespan.py  middleware.py  tool_executor.py
backend/models/: booking.py  lead.py  workflow.py
backend/services/: ai_service.py  booking_service.py  delivery_tools.py  email_service.py  lead_service.py  sheets_service.py  whatsapp_service.py  workflow_service.py
backend/tools/: ai_tools.py  booking_tools.py  delivery_tools.py  email.py  email_tools.py  hubspot_tools.py  lead_tools.py  notify.py  retell_delivery_tools.py  review.py  sheets.py  sheets_tools.py  sms.py  whatsapp_tools.py  workflow_tools.py
backend/workflows/: base.py  registry.py  shared.py
backend/workflows/hvac/: graph.py  nodes.py  prompts.py  state.py
backend/workflows/pest_control/: graph.py  nodes.py  prompts.py  state.py
backend/workflows/plumbing/: graph.py  nodes.py  prompts.py  state.py
backend/workflows/roofing/: graph.py  nodes.py  prompts.py  state.py
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/[vertical]/: page.tsx
frontend/app/clinic/: constants.tsx  page.tsx
frontend/app/contact/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/demo-hvac/: page.tsx
frontend/app/demo-pest-control/: page.tsx
frontend/app/demo-plumbing/: page.tsx
frontend/app/demo-roofing/: page.tsx
frontend/app/hvac/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: ClinicHero.tsx  ContactSection.tsx  DemoWorkflowSection.tsx  FAQSection.tsx  HowItWorks.tsx  ImpactSection.tsx  LogoCloud.tsx  ModernHero.tsx  Navbar.tsx  ProblemSection.tsx  ServicesSection.tsx  SolutionSection.tsx  TestimonialSection.tsx
frontend/hook/: useDomainNavigation.ts
frontend/lib/: firebase-admin.ts  firebase.ts  seo.ts  verticals.ts
frontend/public/: llms.txt
frontend/types/: index.ts
(+37 files in other folders)
